--- a/index.html
+++ b/index.html
@@ -4,20 +4,36 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PostoGestão Pro</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.tailwindcss.com?plugins=forms,typography"></script>
     <script>
       tailwind.config = {
         darkMode: 'class',
         theme: {
           extend: {
+            colors: {
+              primary: "#3B82F6", 
+              "primary-dark": "#2563EB",
+              "background-light": "#F8FAFC", 
+              "background-dark": "#0F172A", 
+              "surface-light": "#FFFFFF",
+              "surface-dark": "#1E293B",
+              "text-primary-light": "#0F172A",
+              "text-primary-dark": "#F1F5F9",
+              "text-secondary-light": "#64748B",
+              "text-secondary-dark": "#94A3B8",
+            },
             fontFamily: {
               sans: ['Inter', 'sans-serif'],
+            },
+            boxShadow: {
+                'soft': '0 4px 6px -1px rgba(0, 0, 0, 0.05), 0 2px 4px -1px rgba(0, 0, 0, 0.03)',
             }
           }
         }
       }
     </script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap" rel="stylesheet" />
     <style>
       body {
         font-family: 'Inter', sans-serif;
