feat: implementar navegação responsiva mobile e manifesto PWA

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="description"
     content="Dashboard administrativo completo para gestão de postos de combustíveis. Controle de vendas, estoque e financeiro em um só lugar." />
   <title>PostoGestão Pro</title>
+  <link rel="manifest" href="/manifest.json" />
   <script src="https://cdn.tailwindcss.com?plugins=forms,typography"></script>
   <script>
     tailwind.config = {
